# ToAndFro

./: .gitignore  Cargo.toml  README.md  expanded.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: casing.rs  defaults.rs  lib.rs  naming.rs
tests/: casing.rs  default.rs  main.rs  naming.rs  reject.rs  serde.rs  standard.rs
