[package]
name = "to_and_fro"
version = "0.4.0"
edition = "2021"
description = "Proc macro for generating implimentations of Display and FromStr for Enum Variants"
repository = "https://github.com/tascord/ToAndFro"
homepage = "https://github.com/tascord/ToAndFro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
heck = "0.4.1"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "fold"] }
